fix bg on IE, fix catalogue download on footer

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
 
 .en {direction:ltr; text-align:left; font-family:arial}
 .fa {direction:rtl; text-align:right;font-family:'open_sansregular'}
-img.bg {z-index:-20; position:fixed; right:0%; left:0%}
+img.bg {z-index:-20; position:fixed; right:0%; left:0%; width:100%; height:80%}
 .set-center {margin-right:auto; margin-left:auto}
 .float-left {float:left;}
 
@@ -28,9 +28,11 @@ float: right;
 min-height: 100%;
 max-height: 100%;
 color: #e5ec6f; 
-background:#27160e;
+
 opacity: .8;
 filter: alpha(opacity=80);
+min-width:31%;
+min-width:31%;
   }
 .edit-category {float: right;
 min-height: 100%;
@@ -231,7 +233,7 @@ margin-top: 2.2%;
 z-index: 20;
 position: fixed;}
 .title-cat {font-size:25px;}
-.slider  img {width: 100%}
+
 .slider  .cycle-overlay {
   text-align:center; 
   width: 40%; 
@@ -275,8 +277,8 @@ filter:alpha(opacity=100); /* For IE8 and earlier */
 }
 .slider {width: 100%; height: 100%; z-index:10}
 
-.slider .hero-unit {width: 500%; max-height: 100%; min-height: 100%; position:relative;}
-.slider .hero-unit .carousel-inner img {height: 100%}
+.slider .hero-unit {width: 100%; max-height: 480px; min-height: 480px; position:relative;}
+
 
 .hero-unit .image-des-holder {
   margin-top:-20px; 
@@ -344,7 +346,7 @@ table.table tr.visited {font-weight:bold}
 }
 #content form.new_category {height:400px}
 .edi-slider-holder {position:absolute; width:100%; height:100%; margin-top:20px}
-.show-slider {width:100%; height:100%}
+.show-slider {width:100%; height:480px}
 .index-slider {width:100%; height:80%}
 .admin_menu {min-width:20%; height:50px;  -webkit-transition:all 1s; /* For Safari 3.1 to 6.0 */
   transition:all 1s; overflow:hidden; color:#DEFF00; 
@@ -435,3 +437,7 @@ a.show-product img {
   max-height:300px;
 }
 .catalog {padding:40px}
+.category-new {min-width:20%; max-width:20%; background:#401805; opacity: .8;
+  filter:alpha(opacity=80); /* For IE8 and earlier */}
+  
+
