--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -91,12 +91,6 @@ body {
 		background-color:#eee;
 	}
 
-	.item {
-		width:20%;
-		height:100%;
-		float:left;
-		background-color:#ddd;
-	}
 	
 	
 	.content {
